refactor: Update project name and version to v4.2.1
Updates the project name from "neoxz.com" to "signasovereign-v4.2.1" across package.json, index.html, and metadata.json to reflect the official application branding and version. Also, updates the AI model references from 'gemini-2.5-flash' to 'gemini-3-flash-preview' and 'gemini-3-pro-preview' where applicable to leverage newer AI capabilities. Minor adjustments to boot animation delays and text for version clarity.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NEOXZ.COM - Perpetual Engine</title>
+    <title>SignaSovereign v4.2.1 - Cybersecured</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
